Bug 155028 - Crash in: `anonymous namespace'::lcl_PasteFlyOrDrawFormat
Summary: Crash in: `anonymous namespace'::lcl_PasteFlyOrDrawFormat
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.2.2 release
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2023-04-26 10:24 UTC by lara_piep
Modified: 2023-05-03 09:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["`anonymous namespace'::lcl_PasteFlyOrDrawFormat"]


Attachments
Sample document for reproducing the crash (13.75 KB, application/vnd.oasis.opendocument.text)
2023-04-27 12:09 UTC, lara_piep
Details

Note You need to log in before you can comment on or make changes to this bug.
Description lara_piep 2023-04-26 10:24:20 UTC
This bug was filed from the crash reporting server and is br-7f82e476-c1e4-4f8b-9c69-e3df75ea82fc.
=========================================
I had just grouped a bunch of small circle objects. I entered into the group and copied one of the circles using the keyboard shortcut Strg+C. The moment I hit Strg+V to paste it, the Writer crashed fully. When trying to restore the document following the crash nothing seemed to happen visually for several minutes but my CPU got very busy. I stopped the process in the task manager and then reopened the document from the windows explorer. I could send a bug report at that point and choose to open the document in save mode. 
The groups still exist and I could immediatly reproduce this bug causing another program crash (I did it a third time by now). It doesn't give me an error code, it just immediatly tells me that Libre Office seems to have crashed, asking whether I wish to restore the document.
Comment 1 Xisco Faulí 2023-04-26 10:54:08 UTC
Thank you for reporting the bug. Please attach a sample document, as this makes it easier for us to verify the bug. 
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the requested document is provided.
(Please note that the attachment will be public, remove any sensitive information before attaching it. 
See https://wiki.documentfoundation.org/QA/FAQ#How_can_I_eliminate_confidential_data_from_a_sample_document.3F for help on how to do so.)
Comment 2 lara_piep 2023-04-27 12:09:54 UTC
Created attachment 186964 [details]
Sample document for reproducing the crash

Comment inside the requested sample document. Thanks for looking into this! :)
Comment 3 Diana Vides 2023-04-27 13:26:21 UTC
Hello lara_piep@web.de,

Thank you for reporting the bug.
Unfortunately without clear steps to reproduce it, we cannot track down the origin of the problem.
Please provide a clearer set of step-by-step instructions on how to reproduce the problem.
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' once the steps are provided
Comment 4 Xisco Faulí 2023-04-27 13:34:22 UTC
Reproduced in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f565658431d6841c9a551a4c160e49080b89a06b
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

Thanks for providing the sample reproducer
Comment 5 Xisco Faulí 2023-04-27 13:43:14 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2021-05-27 10:27:46 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2022-08-29 13:44:02 +0200
commit 8611f6e259b807b4f19c8dc0eab86ca648891ce3 (patch)
tree fa2b0e463aafb51df754768f916ca9104969a557
parent 25a997c15d39fb30676a375df8ea4ce1ed2e1acd (diff)
ref-count SdrObject

Bisected with: bibisect-linux64-7.5

Adding Cc: to Noel Grandin
Comment 6 Commit Notification 2023-04-28 07:12:33 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ea5c846fd5630acef26a3ee96d47c4a43fb5c24d

tdf#155028 Crash in: `anonymous namespace'::lcl_PasteFlyOrDrawFormat

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 BogdanB 2023-04-28 15:06:17 UTC
No crash in
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 424bdeda9fea09f0b48b5551baf872656845c7c3
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Crash in
Version: 7.5.2.1 (X86_64) / LibreOffice Community
Build ID: e8bf3b441b8370f8440b0339fd9490765a8d57ca
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 8 Commit Notification 2023-05-02 11:03:09 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/07162ef2102552eb2572a8aba7e690108a99d4a0

tdf#155028 Crash in: `anonymous namespace'::lcl_PasteFlyOrDrawFormat

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-05-03 09:39:03 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e2b54a73118849a107f516c61c517f259f7d4530

tdf#155028: sw_uiwriter3: Add unittest

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.