tdf#155028 Crash in: `anonymous namespace'::lcl_PasteFlyOrDrawFormat

since
    commit 8611f6e259b807b4f19c8dc0eab86ca648891ce3
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu May 27 10:27:46 2021 +0200
    ref-count SdrObject
The CloneSdrObj() call needs to return a rtl::Reference or the
created object might get destroyed before we return a (now stale)
pointer to it.

Change-Id: I3de46b025887e6d460860b37677d2b18b90fb3e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151137
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>